[package]
name = "olympus"
version = "0.1.0"
authors = ["Thomas Bracher <thchblog@gmail.com>"]
edition = "2018"
default-run = "olympus"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.1.0", features = ["full"] }
protobuf = "2.18.1"
crossbeam = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
toml = "0.5.8"
rand = "0.8.3"

[dev-dependencies]

[build-dependencies]
protoc-rust = "2.18.1"