[package]
name = "client-interface"
version = "0.1.0"
authors = ["Thomas Bracher <tbracher@netwo.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
tokio = { version = "1.1.0", features = ["full"] }
protobuf = "2.18.1"

[dev-dependencies]

[build-dependencies]
protoc-rust = "2.18.1"

[lib]
doctest = false

