[package]
name = "repl"
version = "0.1.0"
authors = ["Thomas Bracher <tbracher@netwo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.0", features = ["full"] }
client-interface = { path = "../client-interface" }
